<resources>
    <string name="app_name">Bookreview</string>
    <string name="dialog_username_input_title">Select a username</string>
    <string name="dialog_username_input_username_hint">Username</string>
    <string name="dialog_username_input_description">To start using the app, you need to select a username.</string>
    <string name="dialog_username_input_start_button">START</string>
    <string name="title_home">Available books</string>
    <string name="add_your_review">Add review</string>
    <string name="comments_on_book">Comments on book</string>
    <string name="submit_review">Submit</string>
    <string name="reviews_of_others">Reviews of others</string>
    <string name="book_published_at">Published: %d</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_publish_year">Year published</string>
    <string name="hint_image_url">Image URL</string>
    <string name="add_book">Add book</string>
    <string name="add_book_title">Add book</string>
    <string name="search_hint">Search for a book</string>
    <string name="app_label">BookReview</string>
</resources>
