<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_page_padding"
    tools:layout_width="300dp">

    <TextView
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_username_input_title"
    />

    <TextView
        style="@style/TextAppearance.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/dialog_username_input_description"
    />

    <EditText
        android:id="@+id/dialog_username_input_username"
        style="@style/TextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:hint="@string/dialog_username_input_username_hint"
        android:maxLines="1"
        tools:text="bob.smith"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/dialog_username_button_start"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/dialog_username_input_start_button"/>

</LinearLayout>
